<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        android:gravity="center"
        android:orientation="vertical">


        <com.haris.meal4u.EditTextUtil.NormalEditText
            android:id="@+id/edit_building"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textSize="@dimen/tagline_text_size"
            android:textColor="?attr/colorTagline"
            android:textColorHint="?attr/colorTagline"
            android:hint="@string/building"
            android:background="@drawable/bg_edit_text"
            android:gravity="center_vertical"
            android:paddingStart="10dp"></com.haris.meal4u.EditTextUtil.NormalEditText>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:background="@drawable/bg_edit_text"
            >


            <com.haris.meal4u.EditTextUtil.NormalEditText
                android:id="@+id/edit_street_address"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:textSize="@dimen/tagline_text_size"
                android:textColor="?attr/colorTagline"
                android:textColorHint="?attr/colorTagline"
                android:background="@color/transparent"
                android:hint="@string/street_address"
                android:gravity="center_vertical"
                android:paddingStart="10dp"></com.haris.meal4u.EditTextUtil.NormalEditText>


            <ImageView
                android:id="@+id/image_select_location"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginEnd="5dp"
                android:padding="10dp"
                android:src="@drawable/ic_location_pointer"
                android:tint="?attr/colorTagline"></ImageView>

        </LinearLayout>

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="horizontal"
           android:gravity="center_vertical">

           <com.haris.meal4u.EditTextUtil.NormalEditText
               android:id="@+id/edit_area"
               android:layout_width="match_parent"
               android:layout_height="50dp"
               android:layout_weight="1"
               android:textSize="@dimen/tagline_text_size"
               android:textColor="?attr/colorTagline"
               android:textColorHint="?attr/colorTagline"
               android:hint="@string/area"
               android:background="@drawable/bg_edit_text"
               android:gravity="center_vertical"
               android:paddingStart="10dp"></com.haris.meal4u.EditTextUtil.NormalEditText>

           <com.haris.meal4u.EditTextUtil.NormalEditText
               android:id="@+id/edit_unit"
               android:layout_width="match_parent"
               android:layout_height="50dp"
               android:layout_weight="1"
               android:layout_marginStart="10dp"
               android:textSize="@dimen/tagline_text_size"
               android:textColor="?attr/colorTagline"
               android:textColorHint="?attr/colorTagline"
               android:hint="@string/floor_unit"
               android:background="@drawable/bg_edit_text"
               android:gravity="center_vertical"
               android:paddingStart="10dp"></com.haris.meal4u.EditTextUtil.NormalEditText>



       </LinearLayout>

        <com.haris.meal4u.EditTextUtil.NormalEditText
            android:id="@+id/edit_comment"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:textSize="@dimen/tagline_text_size"
            android:textColor="?attr/colorTagline"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:textColorHint="?attr/colorTagline"
            android:hint="@string/note_to_rider"
            android:background="@drawable/bg_edit_text"
            android:gravity="top"
            android:paddingTop="15dp"
            android:paddingStart="10dp"></com.haris.meal4u.EditTextUtil.NormalEditText>


        <com.haris.meal4u.TextviewUtil.NormalTextview
            android:id="@+id/txt_confirm_checkout"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/bg_call_to_action"
            android:textSize="@dimen/normal_text_size"
            android:textColor="@color/white"
            android:text="@string/proceed_to_billing"></com.haris.meal4u.TextviewUtil.NormalTextview>

    </LinearLayout>


</RelativeLayout>