<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorBackground"
    tools:context=".ActivityUtil.RedeemCoupon">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <include
            layout="@layout/menu_layout"
            android:layout_width="match_parent"
            android:layout_height="51dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">


            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/ic_coupon"
                android:tint="?attr/colorHeading"
                ></ImageView>

            <com.haris.meal4u.TextviewUtil.LabelTextview
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="?attr/colorNormal"
                android:textSize="@dimen/label_text_size"
                android:layout_marginTop="25dp"
                android:text="@string/coupon_title"
                ></com.haris.meal4u.TextviewUtil.LabelTextview>


            <com.haris.meal4u.TextviewUtil.UbuntuRegularTextview
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="?attr/colorTagline"
                android:textSize="@dimen/tagline_text_size"
                android:textAlignment="center"
                android:layout_marginTop="8dp"
                android:text="@string/coupon_tagline_01"
                ></com.haris.meal4u.TextviewUtil.UbuntuRegularTextview>


            <LinearLayout
                android:layout_width="250dp"
                android:layout_height="70dp"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="30dp"
                android:orientation="vertical"
                android:background="@drawable/bg_coin"
                android:gravity="center"
                >


                <com.haris.meal4u.EditTextUtil.NormalEditText
                    android:id="@+id/edit_coupon_code"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/normal_text_size"
                    android:gravity="center"
                    android:textColor="?attr/colorNormal"
                    android:hint="@string/coupon_code_tagline"
                    android:background="@color/transparent"
                    ></com.haris.meal4u.EditTextUtil.NormalEditText>


            </LinearLayout>



            <LinearLayout
                android:id="@+id/layout_redeem"
                android:layout_width="160dp"
                android:layout_height="45dp"
                android:orientation="vertical"
                android:background="@drawable/bg_call_to_action"
                android:gravity="center"
                >


                <com.haris.meal4u.TextviewUtil.NormalTextview
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/normal_text_size"
                    android:textColor="@color/white"
                    android:text="@string/redeem_it"
                    ></com.haris.meal4u.TextviewUtil.NormalTextview>


            </LinearLayout>

        </LinearLayout>

    </LinearLayout>


</RelativeLayout>