<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="30dp"
        android:gravity="center"
        android:paddingEnd="30dp"
        android:minHeight="180dp"
        android:orientation="vertical">

        <com.haris.meal4u.TextviewUtil.LabelTextview
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="?attr/colorLabel"
            android:layout_gravity="start"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:textSize="@dimen/label_text_size"
            android:text="@string/select_location"></com.haris.meal4u.TextviewUtil.LabelTextview>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="150dp"
            android:gravity="center"
            android:orientation="horizontal">


            <LinearLayout
                android:id="@+id/layout_select_location"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center">


                <ImageView
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:tint="?attr/colorBottomNavigation"
                    android:src="@drawable/ic_location_picker"></ImageView>

                <com.haris.meal4u.TextviewUtil.LabelTextview
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/normal_text_size"
                    android:textColor="?attr/colorNormal"
                    android:layout_marginTop="20dp"
                    android:text="@string/location_picker"></com.haris.meal4u.TextviewUtil.LabelTextview>

            </LinearLayout>

            <TextView
                android:layout_width="1dp"
                android:layout_height="100dp"
                android:background="?attr/colorDefaultFavouriteIcon"></TextView>

            <LinearLayout
                android:id="@+id/layout_search_location"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center">


                <ImageView
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:tint="?attr/colorBottomNavigation"
                    android:src="@drawable/ic_search_location"></ImageView>

                <com.haris.meal4u.TextviewUtil.LabelTextview
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/normal_text_size"
                    android:textColor="?attr/colorNormal"
                    android:layout_marginTop="20dp"
                    android:text="@string/search_location"></com.haris.meal4u.TextviewUtil.LabelTextview>

            </LinearLayout>


        </LinearLayout>


    </LinearLayout>

</RelativeLayout>